fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ body {
   .header-content {
   display: flex;
   flex-direction: row;       /* align items in a row */
-  justify-content: space-between; /* text left, image right */
+  justify-content: flex-start; /* text left, image right */
   align-items: center;       /* vertically center them */
   padding-inline: 20px;
 }
